Enhance stats display and improve UI responsiveness; update dependencies

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,6 +23,8 @@
     <script src="{{ url_for('static', filename='jquery-3.6.0.min.js') }}"></script>
     <script src="{{ url_for('static', filename='jquery.dataTables.js') }}" defer></script>
     <script src="{{ url_for('static', filename='dataTables.bootstrap5.js') }}" defer></script>
+    <!-- Popper (required by Bootstrap for tooltips, dropdowns, popovers) -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" defer></script>
     <script src="{{ url_for('static', filename='bootstrap.min.js') }}" defer></script>
     <script src="{{ url_for('static', filename='site.js') }}" defer></script>
   </head>
