--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -73,6 +73,11 @@
               <i class="fas fa-server me-2"></i> Servers
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link text-white {% if request.endpoint == 'main.terminal' %}active{% endif %}" href="{{ url_for('main.terminal') }}">
+              <i class="fa fa-terminal me-2"></i> Terminal
+            </a>
+          </li>
           
           <!-- Info Section -->
           <li class="nav-header text-white-50 px-3 py-2 mt-3 mb-1">
